# acropolis

./: .dockerignore  .env  .gitattributes  .gitignore  AGENTS.md  BLOCKS_FLOW_DIAGRAMS.md  CLAUDE.md  Cargo.toml  Dockerfile  INVESTIGATION_SUMMARY.md  LOGS_TO_WATCH.md  Makefile  README.md  SPDD_BLOCKS_ANALYSIS.md  SPDD_QUICK_REFERENCE.md  docker-compose.testnet-30.yml  docker-compose.yml  flake.nix  hypotheses.md  new_epoch_state.cddl  package-lock.json  rewards_calculation.md  rustfmt.toml  shelley_ledger_rules.md
codec/: Cargo.toml
codec/src/: address.rs  block.rs  certs.rs  governance.rs  lib.rs  map_parameters.rs  parameter.rs  script.rs  tx.rs  utils.rs  utxo.rs  witness.rs
common/: Cargo.toml
common/examples/: test_streaming_parser.rs
common/src/: account.rs  address.rs  app_error.rs  asset.rs  byte_array.rs  calculations.rs  caryatid.rs  cbor.rs  certificate.rs  cip19.rs  configuration.rs  crypto.rs  drep.rs  encoding.rs  epoch_snapshot.rs  era_history.rs  era_summary.rs  genesis_values.rs  hash.rs  ledger_state.rs  lib.rs  math.rs  messages.rs  metadata.rs  params.rs  pointer_cache.rs  protocol_params.rs  rational_number.rs  resolver.rs  rest_error.rs  rest_helper.rs  rollbacks.rs  script.rs  serialiser.rs  serialization.rs  snapshot.rs  soft_fork.rs  stake_addresses.rs  state_history.rs  subscription.rs  (+8 more)
common/src/commands/: chain_sync.rs  mod.rs  sync.rs  transactions.rs
common/src/ouroboros/: mod.rs  overlay_schedule.rs  overlay_shedule.rs  praos.rs  tpraos.rs  vrf.rs  vrf_validation.rs
common/src/queries/: accounts.rs  addresses.rs  assets.rs  blocks.rs  epochs.rs  errors.rs  governance.rs  ledger.rs  mempool.rs  metadata.rs  misc.rs  mod.rs  network.rs  parameters.rs  pools.rs  scripts.rs  spdd.rs  stake_deltas.rs  transactions.rs  utils.rs  utxos.rs
common/src/snapshot/: NOTES.md  decode.rs  delegation_state.rs  downloader.rs  error.rs  governance.rs  mark_set_go.rs  mod.rs  parser.rs  pool_params.rs  protocol_parameters.rs  reward_snapshot.rs  snapshot.rs  streaming_snapshot.rs  utxo.rs
common/src/validation/: mod.rs  phase1.rs  phase2.rs
common/tests/: loc_over_bus.rs  test.toml
messages/: Cargo.toml
messages/src/: messages.rs
modules/accounts_state/: .gitignore  Cargo.toml  NOTES.md  README.md  diagnostics.sql
modules/accounts_state/src/: accounts_state.rs  certificates_deltas_publisher.rs  configuration.rs  drep_distribution_publisher.rs  monetary.rs  pots_publisher.rs  queries.rs  registration_updates_publisher.rs  rest.rs  rewards.rs  runtime.rs  snapshot.rs  spo_default_vote_publisher.rs  spo_distribution_publisher.rs  spo_distribution_store.rs  spo_reward_state_publisher.rs  spo_rewards_publisher.rs  stake_address_journal.rs  stake_diffs_publisher.rs  stake_reward_deltas_publisher.rs  state.rs  verifier.rs  verify.rs
modules/accounts_state/test-data/: package-lock.json  package.json  pots.mainnet.csv  pots.preview.csv  rewards.mainnet.211.csv  rewards.mainnet.212.csv  rewards.mainnet.213.csv  rewards_diagnostics.sql  rewards_reference_from_dbsync.js  spdd-test.99999.csv  spdd.mainnet.234.csv  spdd.mainnet.507-511.csv  spdd.mainnet.507.csv  spdd.mainnet.508.csv  spdd.mainnet.509.csv  spdd.mainnet.510.csv  spdd.mainnet.511.csv  spdd.mainnet.512-516.csv  spdd.mainnet.512.csv  spdd.mainnet.513.csv  spdd.mainnet.514.csv  spdd.mainnet.515.csv  spdd.mainnet.516.csv  spdd.mainnet.517-521.csv  spdd.mainnet.517.csv  spdd.mainnet.518.csv  spdd.mainnet.519.csv  spdd.mainnet.520.csv  spdd.mainnet.521.csv  spdd.mainnet.522-526.csv  spdd.mainnet.522.csv  spdd.mainnet.523.csv  spdd.mainnet.524.csv  spdd.mainnet.525.csv  spdd.mainnet.526.csv  spdd.mainnet.527-531.csv  spdd.mainnet.527.csv  spdd.mainnet.528.csv  spdd.mainnet.529.csv  spdd.mainnet.530.csv  (+105 more)
modules/address_state/: Cargo.toml
modules/address_state/src/: address_registry.rs  address_state.rs  address_store.rs  fjall_immutable_address_store.rs  immutable_address_store.rs  state.rs  volatile_addresses.rs  volatile_index.rs
modules/assets_state/: Cargo.toml
modules/assets_state/src/: address_state.rs  asset_registry.rs  assets_state.rs  state.rs
modules/block_kes_validator/: Cargo.toml
modules/block_kes_validator/src/: block_kes_validator.rs  kes_validation_publisher.rs  state.rs
modules/block_unpacker/: Cargo.toml  README.md
modules/block_unpacker/src/: block_unpacker.rs
modules/block_vrf_validator/: Cargo.toml
modules/block_vrf_validator/src/: assert_header.rs  block_vrf_validator.rs  snapshot.rs  state.rs  vrf_validation_publisher.rs
modules/chain_store/: Cargo.toml
modules/chain_store/src/: chain_store.rs  helpers.rs  queries.rs  state.rs
modules/consensus/: Cargo.toml  README.md
modules/consensus/src/: consensus.rs  consensus_tree.rs  tree_block.rs  tree_error.rs  tree_observer.rs
modules/custom_indexer/: Cargo.toml  build.rs  config.default.toml
modules/custom_indexer/proto/: indexer.proto
modules/custom_indexer/src/: chain_index.rs  chain_indexer.rs  configuration.rs  cursor_store.rs  custom_indexer.rs  grpc_server.rs  index_actor.rs  indexer.rs  managed_index.rs  utils.rs
modules/drdd_state/: Cargo.toml
modules/drdd_state/src/: drdd_state.rs  rest.rs  state.rs
modules/drep_state/: Cargo.toml  NOTES.md
modules/drep_state/src/: rest.rs  (+6 more)
modules/epoch_activity_counter/: Cargo.toml  README.md
modules/epochs_state/: Cargo.toml  README.md
modules/era_state/: Cargo.toml
modules/fake_block_injector/: Cargo.toml  README.md
modules/genesis_bootstrapper/: Cargo.toml  README.md  build.rs
modules/governance_state/: Cargo.toml  NOTES.md  README.md
modules/historical_accounts_state/: .gitignore  Cargo.toml
modules/historical_epochs_state/: .gitignore  Cargo.toml
modules/indexer/: Cargo.toml  config.default.toml
modules/ledger_state/: Cargo.toml  README.md
modules/mcp_server/: Cargo.toml  README.md  STATUS.md
modules/midnight_state/: Cargo.toml  build.rs
modules/miniprotocols/: Cargo.toml  README.md  miniprotocols.rs
modules/mithril_snapshot_fetcher/: Cargo.toml  README.md
modules/parameters_state/: Cargo.toml  NOTES.md  build.rs
(+1777 files in other folders)
