# Acropolis architecture workspace root

[workspace]
members = [
    # Global message and common definitions
    "common",

    # Modules
    "modules/genesis_bootstrapper",     # Genesis bootstrap UTXOs
    "modules/mithril_snapshot_fetcher", # Mithril snapshot fetcher
    "modules/snapshot_bootstrapper",    # Bootstrap state from a ledger snapshot
    "modules/upstream_chain_fetcher",   # Upstream chain fetcher
    "modules/block_unpacker",           # Block to transaction unpacker
    "modules/tx_unpacker",              # Tx to UTXO unpacker
    "modules/utxo_state",               # UTXO state
    "modules/spo_state",                # SPO state
    "modules/drep_state",               # DRep state
    "modules/parameters_state",         # Keeps track of protocol parameters
    "modules/governance_state",         # Governance state
    "modules/stake_delta_filter",       # Filters address deltas
    "modules/epochs_state",             # Tracks fees and blocks minted and epochs history
    "modules/accounts_state",           # Tracks stake and reward accounts
    "modules/assets_state",             # Tracks native asset mints and burns

    # Process builds
    "processes/omnibus",      # All-inclusive omnibus process
    "processes/replayer",     # All-inclusive process to replay messages
    "processes/golden_tests", #All-inclusive golden tests process
]

resolver = "2"
