# Acropolis architecture workspace root

[workspace]
members = [
    # Global message and common definitions
    "common",

    # Modules
    "modules/genesis_bootstrapper",     # Genesis bootstrap UTXOs
    "modules/mithril_snapshot_fetcher", # Mithril snapshot fetcher
    "modules/snapshot_bootstrapper",    # Bootstrap state from a ledger snapshot
    "modules/upstream_chain_fetcher",   # Upstream chain fetcher
    "modules/block_unpacker",           # Block to transaction unpacker
    "modules/tx_unpacker",              # Tx to UTXO unpacker
    "modules/utxo_state",               # UTXO state
    "modules/spo_state",                # SPO state
    "modules/drep_state",               # DRep state
    "modules/parameters_state",         # Keeps track of protocol parameters
    "modules/governance_state",         # Governance state
    "modules/stake_delta_filter",       # Filters address deltas
    "modules/epochs_state",             # Tracks fees and blocks minted and epochs history
    "modules/accounts_state",           # Tracks stake and reward accounts
    "modules/assets_state",             # Tracks native asset mints and burns
    "modules/chain_store",              # Tracks historical information about blocks and TXs

    # Process builds
    "processes/omnibus",      # All-inclusive omnibus process
    "processes/replayer",     # All-inclusive process to replay messages
    "processes/golden_tests", "codec", #All-inclusive golden tests process
]
resolver = "2"

[workspace.dependencies]
caryatid_sdk = "0.12"
caryatid_process = "0.12"
caryatid_module_rest_server = "0.14"
caryatid_module_clock = "0.12"
caryatid_module_spy = "0.12"
anyhow = "1.0"
chrono = "0.4"
config = "0.15.11"
dashmap = "6.1.0"
hex = "0.4"
imbl = { version = "5.0.0", features = ["serde"] }
pallas = "0.32.1"
pallas-addresses = "0.32.0"
pallas-crypto = "0.32.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_with = { version = "3.12.0", features = ["hex"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
