# Common helper functionality for Acropolis architecture

[package]
name = "acropolis_common"
version = "0.3.0"
edition = "2021"
authors = ["Paul Clark <paul.clark@iohk.io>"]
description = "Common types, messages and helpers for Acropolis"
license = "Apache-2.0"

[dependencies]
caryatid_sdk = { workspace = true }
caryatid_module_clock = { workspace = true }
caryatid_module_rest_server = { workspace = true }

anyhow = { workspace = true }
async-trait = "0.1"
bech32 = "0.11"
bigdecimal = "0.4.8"
bitmask-enum = "2.2"
blake2 = "0.10.6"
bytes = { version = "1", features = ["serde"] }
bs58 = "0.5"
chrono = { workspace = true }
crc = "3"
gcd = "2.3"
fraction = "0.15"
hex = { workspace = true }
lf-queue = "0.1.0"
memmap2 = "0.9"
num-rational = { version = "0.4.2", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["base64"] }
tempfile = "3"
tokio = { workspace = true }
tracing = { workspace = true }
futures = "0.3.31"
minicbor = { version = "0.26.0", features = ["std", "half", "derive"] }
num-traits = "0.2"
imbl = { workspace = true }
dashmap = { workspace = true }
rayon = "1.11.0"
cryptoxide = "0.5.1"
thiserror = "2.0.17"
sha2 = "0.10.8"
caryatid_process.workspace = true
config.workspace = true
pallas = { workspace = true }
pallas-math = { workspace = true }

# The vrf crate has not been fully tested in production environments and still has several upstream issues that are open PRs but not merged yet.
vrf_dalek = { git = "https://github.com/txpipe/vrf", rev = "044b45a1a919ba9d9c2471fc5c4d441f13086676" }
dashu-int = "0.4.1"

[lib]
crate-type = ["rlib"]
path = "src/lib.rs"
