# Common helper functionality for Acropolis architecture

[package]
name = "acropolis_common"
version = "0.3.0"
edition = "2021"
authors = ["Paul Clark <paul.clark@iohk.io>"]
description = "Common types, messages and helpers for Acropolis"
license = "Apache-2.0"

[dependencies]
caryatid_sdk = { workspace = true }
caryatid_module_clock = { workspace = true }
caryatid_module_rest_server = { workspace = true }

anyhow = { workspace = true }
bech32 = "0.11"
bigdecimal = "0.4.8"
bitmask-enum = "2.2"
blake2 = "0.10.6"
bytes = { version = "1", features = ["serde"] }
bs58 = "0.5"
chrono = { workspace = true }
crc = "3"
hex = { workspace = true }
memmap2 = "0.9"
num-rational = { version = "0.4.2", features = ["serde"] }
regex = "1"
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["base64"] }
tokio = { workspace = true }
tracing = { workspace = true }
futures = "0.3.31"
minicbor = { workspace = true, features = ["std", "half", "derive"] }
num-traits = "0.2"
dashmap = { workspace = true }
rayon = "1.11.0"
cryptoxide = "0.5.1"
thiserror = "2.0.17"
sha2 = "0.10.8"

[dev-dependencies]
tempfile = "3.23"
config = { workspace = true }
caryatid_process = { workspace = true }


[lib]
crate-type = ["rlib"]
path = "src/lib.rs"
