# Common message definitions for Acropolis architecture

[package]
name = "acropolis_messages"
version = "0.1.0"
edition = "2021"
authors = ["Paul Clark <paul.clark@iohk.io>"]
description = "Message definitions for Acropolis"
license = "Apache-2.0"

[dependencies]
caryatid_sdk = "0.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["rlib"]
path = "src/messages.rs"

