# Acropolis reward state module

[package]
name = "acropolis_module_accounts_state"
version = "0.1.0"
edition = "2021"
authors = ["Paul Clark <paul.clark@iohk.io>"]
description = "Stake and rewards accounts state Tracker"
license = "Apache-2.0"

[dependencies]
caryatid_sdk = "0.12"
acropolis_common = { path = "../../common" }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
config = "0.15.11"
tracing = "0.1.40"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_with = { version = "3.12.0", features = ["hex"] }
hex = "0.4.3"
imbl = { version = "5.0.0", features = ["serde"] }
bigdecimal = "0.4.8"
rayon = "1.10.0"
dashmap = "6.1.0"

[lib]
path = "src/accounts_state.rs"
