# Acropolis reward state module

[package]
name = "acropolis_module_accounts_state"
version = "0.1.0"
edition = "2021"
authors = ["Paul Clark <paul.clark@iohk.io>"]
description = "Stake and rewards accounts state Tracker"
license = "Apache-2.0"

[dependencies]
acropolis_common = { path = "../../common" }

caryatid_sdk = { workspace = true }

anyhow = { workspace = true }
bigdecimal = "0.4.8"
chrono = { workspace = true }
config = { workspace = true }
hex = { workspace = true }
imbl = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lib]
path = "src/accounts_state.rs"
