# Acropolis reward state module

[package]
name = "acropolis_module_accounts_state"
version = "0.1.0"
edition = "2021"
authors = ["Paul Clark <paul.clark@iohk.io>"]
description = "Stake and rewards accounts state Tracker"
license = "Apache-2.0"

[dependencies]
acropolis_common = { path = "../../common" }

caryatid_sdk = { workspace = true }

anyhow = { workspace = true }
bigdecimal = "0.4.8"
chrono = { workspace = true }
config = { workspace = true }
hex = { workspace = true }
imbl = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
fjall = { workspace = true }
csv = "1.3.1"
itertools = "0.14.0"

[dev-dependencies]
tempfile = "3"

[lib]
path = "src/accounts_state.rs"
