# Acropolis reward state module

[package]
name = "acropolis_module_assets_state"
version = "0.1.0"
edition = "2021"
authors = ["William Hankins <william@sundae.fi>"]
description = "Native Asset State Tracker"
license = "Apache-2.0"

[dependencies]
acropolis_common = { path = "../../common" }

caryatid_sdk = { workspace = true }

anyhow = { workspace = true }
config = { workspace = true }
hex = { workspace = true }
imbl = { workspace = true }
serde_cbor = "0.11"
tokio = { workspace = true }
tracing = { workspace = true }

[lib]
path = "src/assets_state.rs"
