# Acropolis block unpacker module

[package]
name = "acropolis_module_block_unpacker"
version = "0.2.0"
edition = "2021"
authors = ["Paul Clark <paul.clark@iohk.io>"]
description = "Block unpacker Caryatid module for Acropolis"
license = "Apache-2.0"

[dependencies]
caryatid_sdk = "0.2.0"
acropolis_common = { path = "../../common" }
pallas = "0.32.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
config = "0.15.11"
tracing = "0.1.40"

[lib]
path = "src/block_unpacker.rs"
