# Acropolis block unpacker module

[package]
name = "acropolis_module_block_unpacker"
version = "0.2.0"
edition = "2021"
authors = ["Paul Clark <paul.clark@iohk.io>"]
description = "Block unpacker Caryatid module for Acropolis"
license = "Apache-2.0"

[dependencies]
acropolis_common = { path = "../../common" }

caryatid_sdk = { workspace = true }

anyhow = { workspace = true }
config = { workspace = true }
pallas = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lib]
path = "src/block_unpacker.rs"
