# Acropolis Block VRF Validator

[package]
name = "acropolis_module_block_vrf_validator"
version = "0.1.0"
edition = "2021"
authors = ["Golddy <golddy@sundae.fi>"]
description = "Validate the VRF calculation in the block header"
license = "Apache-2.0"

[dependencies]
acropolis_common = { path = "../../common" }

caryatid_sdk = { workspace = true }

anyhow = { workspace = true }
config = { workspace = true }
hex = { workspace = true }
imbl = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0.17"
serde = { workspace = true }
pallas = { workspace = true }

[lib]
path = "src/block_vrf_validator.rs"
