# Acropolis indexer module

[package]
name = "acropolis_module_custom_indexer"
version = "0.1.0"
edition = "2021"
authors = ["William Hankins <william@sundae.fi>"]
description = "Core indexer logic"
license = "Apache-2.0"

[dependencies]
acropolis_common = { path = "../../common" }

caryatid_sdk = { workspace = true }

anyhow = { workspace = true }
bincode = "1"
config = { workspace = true }
fjall = "2.7.0"
futures = "0.3"
pallas = { workspace = true}
serde = { workspace = true, features = ["rc"] }
tokio = { workspace = true }
tracing = { workspace = true }

[lib]
path = "src/custom_indexer.rs"
