# Acropolis DRep state module

[package]
name = "acropolis_module_drep_state"
version = "0.1.0"
edition = "2021"
authors = ["Dmitry Shtukenberg <dmitry.shtukenberg@iohk.io>"]
description = "DRep State Tracker"
license = "Apache-2.0"

[dependencies]
acropolis_common = { path = "../../common" }

caryatid_sdk = { workspace = true }

anyhow = { workspace = true }
config = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lib]
path = "src/drep_state.rs"
