# Acropolis epochs state module

[package]
name = "acropolis_module_epochs_state"
version = "0.1.0"
edition = "2021"
authors = ["Paul Clark <paul.clark@iohk.io>"]
description = "Epochs state Caryatid module for Acropolis"
license = "Apache-2.0"

[dependencies]
acropolis_common = { path = "../../common" }

caryatid_sdk = { workspace = true }

anyhow = { workspace = true }
config = { workspace = true }
hex = { workspace = true }
imbl = { workspace = true }
pallas = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
log = "0.4.28"

[lib]
path = "src/epochs_state.rs"
