# Acropolis era state module

[package]
name = "acropolis_module_era_state"
version = "0.1.0"
edition = "2021"
description = "Era history state Caryatid module for Acropolis"
license = "Apache-2.0"

[dependencies]
acropolis_common = { path = "../../common" }

caryatid_sdk = { workspace = true }

anyhow = { workspace = true }
config = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lib]
path = "src/era_state.rs"
