# Acropolis genesis bootstrapper module

[package]
name = "acropolis_module_genesis_bootstrapper"
version = "0.1.0"
edition = "2021"
authors = ["Paul Clark <paul.clark@iohk.io>"]
description = "Genesis bootstrapper Caryatid module for Acropolis"
license = "Apache-2.0"
build = "build.rs"

[dependencies]
caryatid_sdk = "0.2.0"
acropolis_common = { path = "../../common" }
pallas = "0.32.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
config = "0.14.0"
tracing = "0.1.40"
serde_json = "1.0.138"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

[lib]
path = "src/genesis_bootstrapper.rs"
