# Acropolis genesis bootstrapper module

[package]
name = "acropolis_module_genesis_bootstrapper"
version = "0.1.0"
edition = "2021"
authors = ["Paul Clark <paul.clark@iohk.io>"]
description = "Genesis bootstrapper Caryatid module for Acropolis"
license = "Apache-2.0"
build = "build.rs"

[dependencies]
acropolis_common = { path = "../../common" }
anyhow = "1.0"
caryatid_sdk = "0.12"
config = "0.15.11"
hex = "0.4"
pallas = "0.32.1"
serde_json = "1.0.138"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

[lib]
path = "src/genesis_bootstrapper.rs"
