# Acropolis genesis bootstrapper module

[package]
name = "acropolis_module_genesis_bootstrapper"
version = "0.1.0"
edition = "2021"
authors = ["Paul Clark <paul.clark@iohk.io>"]
description = "Genesis bootstrapper Caryatid module for Acropolis"
license = "Apache-2.0"
build = "build.rs"

[dependencies]
acropolis_common = { path = "../../common" }

caryatid_sdk = { workspace = true }

anyhow = { workspace = true }
config = { workspace = true }
hex = { workspace = true }
pallas = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { workspace = true }
blake2 = "0.10.6"
hex = { workspace = true }

[lib]
path = "src/genesis_bootstrapper.rs"
