# Acropolis Governance state module

[package]
name = "acropolis_module_governance_state"
version = "0.1.0"
edition = "2021"
authors = ["Dmitry Shtukenberg <dmitry.shtukenberg@iohk.io>"]
description = "Governance State Tracker"
license = "Apache-2.0"

[dependencies]
caryatid_sdk = "0.12"
acropolis_common = { path = "../../common" }
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
config = "0.15.11"
tracing = "0.1.40"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.12.0", features = ["hex","base64"] }
hex = "0.4.3"

[lib]
path = "src/governance_state.rs"
