# Acropolis historical epochs state module

[package]
name = "acropolis_module_historical_epochs_state"
version = "0.1.0"
edition = "2021"
authors = ["Golddy <golddy@sundae.fi>"]
description = "Historical stake epochs tracker"
license = "Apache-2.0"

[dependencies]
acropolis_common = { path = "../../common" }

caryatid_sdk = { workspace = true }

anyhow = { workspace = true }
config = { workspace = true }
minicbor = { version = "0.26.0", features = ["std", "derive"] }
hex = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
fjall = "2.11.2"
rayon = "1.10.0"

[lib]
path = "src/historical_epochs_state.rs"
