# Acropolis historical epochs state module

[package]
name = "acropolis_module_historical_epochs_state"
version = "0.1.0"
edition = "2021"
authors = ["Golddy <golddy@sundae.fi>"]
description = "Historical stake epochs tracker"
license = "Apache-2.0"

[dependencies]
acropolis_common = { path = "../../common" }

caryatid_sdk = { workspace = true }

anyhow = { workspace = true }
config = { workspace = true }
minicbor = { workspace = true, features = ["std", "derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
fjall = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lib]
path = "src/historical_epochs_state.rs"
