# Acropolis MCP Server Module

[package]
name = "acropolis_module_mcp_server"
version = "0.1.0"
edition = "2021"
authors = ["Acropolis Contributors"]
description = "Model Context Protocol server for Acropolis"
license = "Apache-2.0"

[dependencies]
acropolis_common = { path = "../../common" }
acropolis_module_rest_blockfrost = { path = "../rest_blockfrost" }

caryatid_sdk = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
once_cell = "1.20"

# MCP SDK - using rmcp with streamable HTTP server transport
rmcp = { version = "0.8", features = ["server", "transport-streamable-http-server"] }

[lib]
path = "src/mcp_server.rs"
